# endfield-hub

./: .gitignore  docker-compose.yml
.claude/: settings.local.json
server/: .env.example  Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20260129_100205_create_session_table.rs
server/src/: main.rs
server/src/app/: mod.rs
server/src/internal/db/: mod.rs
web/: components.json  package.json
web/components/ui/: accordion.tsx  calendar.tsx  checkbox.tsx  command.tsx  context-menu.tsx  input-otp.tsx  menubar.tsx  pagination.tsx  radio-group.tsx
